# littlerpc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/local_rpc/: CMakeLists.txt  littlerpc_conf.h  local_rpc.c  local_rpc.cpp  role1.c  role1.h  role2.c  role2.h  service_id_def.h  test.proto
littlerpc/: littlerpc.c  littlerpc.cpp  littlerpc.h  littlerpc_conf_template.h  littlerpc_def.h  littlerpc_pbc_service_manager.c  littlerpc_pbc_service_manager.cpp  littlerpc_pbc_service_manager.h  littlerpc_seq_callback_manager.c  littlerpc_seq_callback_manager.cpp  littlerpc_seq_callback_manager.h
refs/remotes/origin/: main
